--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
-project(CSC4543a)
+project(CSC4544a)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(CSC454HW4a Main.cpp Model.h Pipe.h Port.h Network.h)
+add_executable(CSC454HW4a Main.cpp Model.h Pipe.h Port.h Network.h XORModel.cpp XORModel.h)
