--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CSC4544a)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(CSC454HW4a Main.cpp Model.h Pipe.h Port.h Network.h XORModel.cpp XORModel.h)
+add_executable(CSC454HW4a Main.cpp Model.h Pipe.h Port.h Network.h XORModel.cpp XORModel.h MemoryModel.cpp MemoryModel.h)
